# hyditor

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  env.dev  eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md  release.yml
.github/prompts/: plan-hyditor.prompt.md
.github/workflows/: ci.yml  release.yml
docs/: jekyll-prerequisites.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: gemini.rs
src-tauri/src/auth/: device_flow.rs  mod.rs  token_store.rs
src-tauri/src/fs/: mod.rs  scoped.rs  session.rs
src-tauri/src/git/: branch.rs  clone.rs  commit.rs  mod.rs  publish.rs  pull.rs  push.rs  status.rs
src-tauri/src/github/: mod.rs  pull_request.rs  repos.rs
src-tauri/src/preview/: jekyll.rs  mod.rs
src/lib/components/: AboutPanel.svelte  AiPanel.svelte  AuthScreen.svelte  BranchSelector.svelte  DiffView.svelte  Editor.svelte  FileTree.svelte  FrontMatterForm.svelte  GitPanel.svelte  PRDialog.svelte  PanelResizeHandle.svelte  Preview.svelte  RepoSelector.svelte  SearchPanel.svelte  UpdateNotification.svelte  ViewportToolbar.svelte
src/lib/stores/: ai.ts  auth.ts  editor.test.ts  editor.ts  layout.test.ts  layout.ts  preview.ts  repo.ts
src/lib/tauri/: ai.ts  auth.ts  fs.ts  git.ts  github.ts  preview.ts  runtime.ts  session.ts  updater.ts  window.ts
src/lib/utils/: aiEdits.test.ts  aiEdits.ts  aiMetaAnalysis.test.ts  aiMetaAnalysis.ts  aiTemplates.test.ts  aiTemplates.ts  aiTranscripts.test.ts  aiTranscripts.ts  authErrors.test.ts  authErrors.ts  diff.test.ts  diff.ts  errors.test.ts  errors.ts  frontmatter.test.ts  frontmatter.ts  jekyll.test.ts  jekyll.ts  lineEndings.test.ts  lineEndings.ts  markdown.test.ts  markdown.ts
src/routes/: +layout.ts  +page.svelte
src/routes/preview-window/: +page.svelte
