[package]
name = "hyditor"
version = "0.1.0"
description = "Hyditor Tauri backend"
authors = ["Hyditor Contributors"]
license = "GPL-3.0-only"
edition = "2021"

[lib]
name = "hyditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
dirs = "6.0.0"
git2 = "0.20.0"
octocrab = "0.43.0"
once_cell = "1.20.3"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-stronghold = "2.2.0"
tokio = { version = "1.43.0", features = ["full"] }
walkdir = "2.5.0"
zeroize = "1.8.1"

[dev-dependencies]
tempfile = "3.15.0"
