[package]
name = "hyditor"
version = "0.1.0"
description = "Hyditor Tauri backend"
authors = ["Hyditor Contributors"]
license = "GPL-3.0-only"
edition = "2021"

[lib]
name = "hyditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
base64 = "0.22.1"
dirs = "6.0.0"
git2 = "0.20.0"
iota_stronghold = "2.1.0"
keyring = "3.6.1"
octocrab = "0.43.0"
once_cell = "1.20.3"
rand = "0.8.5"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-stronghold = "2.2.0"
tokio = { version = "1.43.0", features = ["full"] }
walkdir = "2.5.0"
zeroize = "1.8.1"

[dev-dependencies]
tempfile = "3.15.0"
