[package]
name = "hyditor"
version = "0.1.0"
description = "Hyditor Tauri backend"
authors = ["Hyditor Contributors"]
license = "GPL-3.0-only"
edition = "2021"

[lib]
name = "hyditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
base64 = "0.22.1"
dirs = "6.0.0"
git2 = "0.20.0"
iota_stronghold = "2.1.0"
keyring = "3.6.1"
octocrab = "0.43.0"
once_cell = "1.20.3"
rand = "0.8.5"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-mcp-bridge = "0.10"
tauri-plugin-opener = "2.2.6"
tauri-plugin-process = "2.2.0"
tauri-plugin-stronghold = "2.2.0"
tauri-plugin-updater = "2.6.0"
tokio = { version = "1.43.0", features = ["full"] }
walkdir = "2.5.0"
zeroize = "1.8.1"

[dev-dependencies]
tempfile = "3.15.0"

# Argon2 key-derivation and XChaCha20-Poly1305 snapshot encryption are
# memory-hard / compute-heavy and ~100× slower without optimisations.
# Compiling ALL dependency crates with opt-level 2 in dev/test mode brings
# Stronghold operations (open + save) from ~48 s to < 1 s, fixing the
# poll_for_token delay and letting token_store integration tests run in CI.
# The main hyditor crate stays at opt-level 0 for fast incremental rebuilds.
[profile.dev.package."*"]
opt-level = 2
